Fixed issue  2 Completed issue 5 Added countriesRNG RelaxNG validation file

--- a/I1/I1.csproj
+++ b/I1/I1.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+    <PackageReference Include="RelaxNG" Version="3.2.3" />
+    <PackageReference Include="xmlrpcnet" Version="3.0.0.266" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +25,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
